src/app/billing/billing-model-overview/billing-model-overview.component.scss
/* ... */
.mob-img {
  margin-top: 50px;
  width: 197px;
  padding-left: 18px;
  height: 345px;
}
.img-title {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: normal;
  line-height: 9px;
  font-size: 10.39801px;
  text-align: justify;
  color: #080808;
}
.img-des {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: normal;
  line-height: 9px;
  font-size: 7.83px;
  text-align: justify;
  color: #080808;
}
.img-currency {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 9.37127px;
  color: #000000;
}
.img-transfer {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 9.35254px;
  color: #080808;
}
.tab-box {
  margin-top: 20px;
  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
  hr {
    width: 95%;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
  }
  .tab-box1 {
    padding: 4px;
    img {
      height: 15px;
    }
  }
}
.recurring-img {
  margin-right: -28px;
  width: 237px;
  height: 430px;
  float: right;
  margin-top: 10px;
  padding: 13px 1px;
  padding-right: 10%;
  background-image: url("assets/images/Blank_Mobile.png");
  background-repeat: no-repeat;
  background-size: 212px 408px;
}
.right-side {
  left: 40px;
}
.QR-div {
  right: 7px;
}
@media (min-width: 1920px) {
  .singleimg {
    // margin-right: -63px;
    width: 100%;
    height: 519px !important;
    // float: right;
    margin-top: 28px;
    padding: 0px 0px;
    // padding-right: 23%;
  }
}

